# basic_poll_application

./: LICENSE  README.rst  setup.cfg
django_polls.egg-info/: PKG-INFO  SOURCES.txt
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html  results.html
